--- a/fully-connect-neural-network.ipynb
+++ b/fully-connect-neural-network.ipynb
@@ -111,8 +111,8 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "HIDDEN1_UNITS = 50\n",
-    "HIDDEN2_UNITS = 30\n",
+    "HIDDEN1_UNITS = 120\n",
+    "HIDDEN2_UNITS = 50\n",
     "\n",
     "with tf.name_scope('hidden1'):\n",
     "    W1 = tf.Variable(\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -213,19 +213,25 @@
      "text": [
       "Step 1: accuracy = 0.10\n",
       "Step 100: accuracy = 0.80\n",
-      "Step 200: accuracy = 0.90\n",
-      "Step 300: accuracy = 0.80\n",
+      "Step 200: accuracy = 0.40\n",
+      "Step 300: accuracy = 0.90\n",
       "Step 400: accuracy = 0.90\n",
-      "Step 500: accuracy = 0.90\n",
-      "Step 600: accuracy = 0.80\n",
+      "Step 500: accuracy = 1.00\n",
+      "Step 600: accuracy = 0.90\n",
       "Step 700: accuracy = 0.80\n",
-      "Step 800: accuracy = 1.00\n",
-      "Step 900: accuracy = 0.70"
+      "Step 800: accuracy = 0.90\n",
+      "Step 900: accuracy = 0.80\n",
+      "Step 1000: accuracy = 0.80\n",
+      "Step 1100: accuracy = 0.90\n",
+      "Step 1200: accuracy = 1.00\n",
+      "Step 1300: accuracy = 0.90\n",
+      "Step 1400: accuracy = 0.80\n",
+      "Step 1500: accuracy = 0.90\n"
      ]
     }
    ],
    "source": [
-    "MAX_STEPS = 1000\n",
+    "MAX_STEPS = 1500\n",
     "\n",
     "session = tf.InteractiveSession()\n",
     "init = tf.global_variables_initializer()\n",
@@ -235,7 +241,7 @@
     "    accuracy = estimate(mnist.validation)\n",
     "    feed_dict = fill_feed_dict(mnist.train)\n",
     "    _, acc_rate = session.run([train_step, accuracy], feed_dict=feed_dict)\n",
-    "    if step == 1 or step == MAX_STEP or step % 100 == 0:\n",
+    "    if step == 1 or step == MAX_STEPS or step % 100 == 0:\n",
     "        print('Step %d: accuracy = %.2f' % (step, acc_rate))"
    ]
   },
@@ -248,11 +254,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is: 90.26%\n"
+     ]
+    }
+   ],
    "source": [
     "correct_prediction = tf.equal(tf.argmax(y,1), tf.argmax(t,1))\n",
     "accuracy = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
@@ -262,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
